# Unlock-Driven-Competence-Gap-Discovery

./: .gitignore  CITATION.cff  README.md  developmental_leverage.py  pyproject.toml  unlock_driven.py
.github/workflows/: tests.yml
docs/: evaluation-plan.md  proposal-v0.3.md  research-plan.md
tests/: test_developmental_leverage.py  test_unlock_driven.py
