[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unlock-driven-competence-gap-discovery"
version = "0.1.0"
description = "A minimal unlock-driven curriculum scaffold for developmental agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Livan Zhou", email = "zhoulivan@gmail.com"}]
dependencies = []

[tool.setuptools]
py-modules = ["unlock_driven"]
